login and registration pages implemented

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 .bg-rose-600 {
-    background-color:hsl(0, 100%, 47%)
+	background-color: hsl(0, 100%, 47%);
 }
 
 .h-wrapper {
-    max-width: 1100px;
-    margin: 0 auto;
+	max-width: 1100px;
+	margin: 0 auto;
 }
