--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,13 @@
 	/* max-width: 1100px; */
 	margin: 0 auto;
 }
+
+// CSS
+.remove-arrow::-webkit-inner-spin-button,
+.remove-arrow::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.remove-arrow {
+    -moz-appearance: textfield;
+}
